src/objects/QPMS__CSMS_General_Sub_Task__c.object
<CustomObject>
    <description>CSMS General Sub Task</description>
    <fields>
        <fullName>QPMS__CSMS_General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSMS General Task</description>
        <inlineHelpText>CSMS General Task</inlineHelpText>
        <label>CSMS General Task</label>
        <referenceTo>QPMS__CSMS_General_Task__c</referenceTo>
        <relationshipLabel>CSMS General Sub Tasks</relationshipLabel>
        <relationshipName>CSMS_General_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Calibration__c</fullName>
        <description>Calibration Lookup</description>
        <formula>QPMS__CSMS_General_Task__r.QPMS__Calibration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calibration Lookup</inlineHelpText>
        <label>Calibration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_By_Name__c</fullName>
        <description>Completed By Name</description>
        <formula>QPMS__Completed_By__r.FirstName +&quot; &quot;+QPMS__Completed_By__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Completed By Name</inlineHelpText>
        <label>Completed By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Completed By</description>
        <inlineHelpText>Completed By</inlineHelpText>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSMS_General_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <description>Completed Date</description>
        <inlineHelpText>Completed Date</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Details__c</fullName>
        <description>Details</description>
        <inlineHelpText>Details</inlineHelpText>
        <label>Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Stores general task Initiating Site Security</description>
        <inlineHelpText>Stores general task Initiating Site Security</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Maintenance__c</fullName>
        <description>Maintenance</description>
        <formula>QPMS__CSMS_General_Task__r.QPMS__Maintenance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Maintenance</inlineHelpText>
        <label>Maintenance</label>
        <type>Text</type>
    </fields>
    <label>CSMS General Sub Task</label>
    <nameField>
        <displayFormat>CSMSGSR-{00000}</displayFormat>
        <label>CSMS General Sub Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSMS General Sub Tasks</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Adhoc_Action</fullName>
        <active>true</active>
        <description>Adoc Action</description>
        <label>Adhoc Action</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>